before moving render to sightword.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sightwords</title>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/list.js"></script>
+    <script type="text/javascript" src="src/sightword.js"></script>
 </head>
 
 <body>
