--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="src/index.js"></script>
     <script type="text/javascript" src="src/list.js"></script>
     <script type="text/javascript" src="src/sightword.js"></script>
+    <script type="text/javascript" src="src/game.js"></script>
 </head>
 
 <body>
