building game.js and moving functionality

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script type="text/javascript" src="src/list.js"></script>
     <script type="text/javascript" src="src/sightword.js"></script>
     <script type="text/javascript" src="src/game.js"></script>
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
-    <div id="list-container">
-
+    <div id="list-container" class="parent">
     </div>
 
 </body>
