display words and spanize them

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-    <div id="list-container" class="parent">
-    </div>
 
-</body>
+    <body>
+
+        <div id="list-container" class="parent"></div>
+
+    </body>
 
 </html>
