added reset game button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <body>
-
+        <button onClick="window.location.reload();">Restart Game</button>
         <div id="list-container" class="parent"></div>
 
     </body>
