--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 
     <body>
         <button id="restart" onClick="window.location.reload();">Restart Game</button>
-        <button id="new-list" onClick='document.querySelector("#create-list-form").style="display: block;" '>Create New
-            List</button>
-        <button id="new-word" onClick='document.querySelector("#create-word-form").style="display: block;" '>Create New
-            Word</button>
+        <button id="new-list">Toggle Create New List Form</button>
+        <button id="new-word">Toggle Create New Word Form</button>
         <div class=" form-container">
             <form id="create-list-form" style="display: none;">
                 <!-- change this to style: none? -->
