--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="restart" onClick="window.location.reload();">Restart Game</button>
         <button id="new-list">Toggle Create New List Form</button>
         <button id="new-word">Toggle Create New Word Form</button>
+        <!-- <button id="dark-mode">Toggle for Dark Mode</button> -->
         <div class=" form-container">
             <form id="create-list-form" style="display: none;">
                 <h3>Create a List!</h3>
